# ChessBot-v2

./: readme.md
Chess Bot Display/: Cargo.toml
Chess Bot Display/src/: main.rs
Chess Bot Training/: .gitignore  piece_grabber.py  readme.md  test_labeling.py  test_model.py  train.py
Yolo Training/: .gitignore  board_gen.py  chess.yaml  chess_svg.py  image_gen.py  image_grabber.py  main.py  piece_grabber.py  readme.md  test_model.py  train.py
Yolo Training/datasets/: chess.yaml
